# src/routes/AuthenticationRoutes.js
@@ -5,4 +5,6 @@ module.exports = (routers) => {
   routers.post('/register', AuthenticationControllerPolicy.register, AuthenticationController.register)
 
   routers.post('/login', AuthenticationController.login)
+
+  routers.get('/getKeys/css', AuthenticationController.cssKeys)
 }
